--- a/Barcode/WebContent/css/style.css
+++ b/Barcode/WebContent/css/style.css
@@ -42,7 +42,7 @@ body { font-family: 'Nanum Gothic', son-serif; }
 #google{width:100%; height:120px; margin-top:2px; margin-bottom:0;}
 #notice{width:100%; height:50px; margin-top:7px;}
 #notice a{color:gray;}
-	#box_img{width:130px; height:50px; background:yellow; float:left; margin-left:10px;}
+	#box_img{width:130px; height:50px; float:left; margin-left:10px;}
 	#_box{float:left;width:500px; height:50px;overflow:hidden;}
 	
 	#move{
@@ -87,7 +87,7 @@ body { font-family: 'Nanum Gothic', son-serif; }
 
 /*section2*/
 #section2{width:332px; height:auto; padding:5px 0px 0px 0px; float:right;}
-#login{width:100%; height:140px; margin-top:2px;}
+#login{width:100%; height:140px; margin-top:2px; position:relative}
 #login_box{width:213px; height:70px; margin:20px 0px 12px 13px; float:left;
 					}
 
@@ -111,7 +111,21 @@ body { font-family: 'Nanum Gothic', son-serif; }
   position:relative;
   top:2px;
 }
-					
+
+#logout{width:223px; height:71px; margin:0 auto; float:left;}
+#logout a{color:gray}
+	#profile{width:58px; height:58px; background:gray; border-radius:30px; margin:7px; float:left; margin-right:15px; overflow:hidden;}
+	#login_button{width:70px; height:71px; background:#ff4800; float:left; cursor:pointer;
+						margin-top:20px; text-align:center; float:left;
+						}
+	#login_button p{font-size:14px; font-weight:bold; margin-top:27px; color:#fff;}
+	.myPage{background:#fff; width:60px; float:left; font-size:12px; padding:3px 3px 3px 5px; border:1px lightgray solid;
+	cursor:pointer;}
+	
+	#myPage_other{width:100%; height: 38px; background:lightgray; clear:both;}
+		#myPage_o_but{width:25%; height:39px;float:left; cursor:pointer; text-align:center;}
+		#myPage_o_but:hover{background:#aaa;}
+
 #shopping{width:100%; height:288px; text-align:center;}
 
 #shopping_1{width:150px; height:235px;float:left; margin:10px 0px 13px 10px;}
@@ -129,7 +143,7 @@ body { font-family: 'Nanum Gothic', son-serif; }
 				border-top: solid 1px #efefef;  border-bottom:solid 1px lightgray;
 				text-align:center;}
 				
-#footerWrap{width:1100px; height:auto; background:yellow; margin:0 auto; margin-top:18px;
+#footerWrap{width:1100px; height:auto; margin:0 auto; margin-top:18px;
 					font-size:14px; font-weight:bold;
 }
 .a_{float:left; margin-left:10px;}
@@ -167,7 +181,7 @@ input:focus{
 #movie_sm{width:272px; height:182px; float:left;}
 #movie_sm_r{width:272px; height:182px; float:right;}
 
-#movie_img{width:120px; height:182px; background:blue; float:left;}
+#movie_img{width:120px; height:182px; float:left;}
 #movie_text{width:140px; height:182px; float:left; margin-left:10px;}
 
 .movie_tit{font-size:18px; color:#ff0; font-weight:bold; margin-top:5px;}
