--- a/Barcode/WebContent/css/detail_style.css
+++ b/Barcode/WebContent/css/detail_style.css
@@ -13,7 +13,7 @@ body { font-family: 'Nanum Gothic', son-serif; }
 #all{width:100%; height:auto; margin:0 auto; position:relative;}
 #header_{width:100%; height:auto;position:fixed; z-index:20;}
 #header{width:100%; height:55px; background:#ff4800; }
-#logo{width:150px; height:45px; background:#000; float:left; margin-top:5px;}
+#logo{width:150px; height:45px; float:left; margin-top:5px;}
 #subject{float:left; margin:15px 0px 0px 10px;}
 #subject p{color:#fff; font-size:16px;}
 #subject span{font-weight:bold;letter-spacing:-1px; font-size:20px;}
