--- a/Barcode/WebContent/css/product_style.css
+++ b/Barcode/WebContent/css/product_style.css
@@ -104,7 +104,7 @@ a {
 #s_bbb {
 	width: 100%;
 	height: 450px;
-	background: url('../img/slider_Ex2.jpg');
+	background: url('../img/slider_Ex2.png');
 }
 
 #s_ccc {
