Movielist fix needed

--- a/Barcode/WebContent/movie/movie.all.css
+++ b/Barcode/WebContent/movie/movie.all.css
@@ -3392,7 +3392,7 @@ body{background:#727272 url(http://static.naver.net/movie/2012/06/body_bg.png) r
 #wrap.fix3{width:1201px}
 #wrap.fix3 #content{width:1010px;padding-bottom:0;text-align:left}
 #wrap.fix3 .section_group_frst{margin-left:0;border-right:0;padding-left:0}
-#container{margin-left: 85px;}
+#container{margin-left:170px}
 #content{position:relative;float:none;margin-top:9px;padding-bottom:55px;border-right:1px solid #525252;border-bottom:1px solid #525252;background:#fff;*zoom:1}
 #content:after{display:block;clear:both;content:" "}
 #container .spot{position:relative;margin-top:11px;margin-bottom:-1px;*z-index:20}
