--- a/Barcode/WebContent/search/search_files/style.css
+++ b/Barcode/WebContent/search/search_files/style.css
@@ -94,7 +94,7 @@ body { font-family: 'Nanum Gothic', son-serif; }
 
 /*section2*/
 #section2{width:332px; height:auto; padding:5px 0px 0px 0px; float:right;}
-#login{width:100%;height: 120px;margin-top:2px;position:relative;}
+#login{width:100%;height: 120px;margin-top:2px;position:relative;z-index: -10;}
 #login_box{width:213px; height:70px; margin:20px 0px 12px 13px; float:left;
 					}
 
