--- a/Barcode/WebContent/css/join_style.css
+++ b/Barcode/WebContent/css/join_style.css
@@ -7,7 +7,7 @@ body { font-family: 'Nanum Gothic', son-serif; background:#efefef;}
 
 /*header*/
 #header{width:100%; height:55px; background:#ff4800;}
-#logo{width:150px; height:45px; background:#000; float:left; margin-top:5px;}
+#logo{width:150px; height:45px; float:left; margin-top:5px;}
 #subject{float:left; margin:15px 0px 0px 10px;}
 #subject p{color:#fff; font-size:16px;}
 #subject span{font-weight:bold;letter-spacing:-1px; font-size:20px;}
@@ -37,8 +37,8 @@ body { font-family: 'Nanum Gothic', son-serif; background:#efefef;}
 #join{width:1045; height:auto; margin:0 auto;}
 #join p{font-size:18px; color:#ff4800; font-weight:bold;line-height:250px;}
 #join_1{width:250px; height:250px; background:#fff; float:left; text-align:center; border:1px #ff4800 solid;}
-#join_2{width:250px; height:250px; background:#fff; float:left; margin-left:10px;text-align:center; border:1px #ff4800 solid;}
-#join_3{width:250px; height:250px; background:#fff; float:left; margin-left:10px;text-align:center; border:1px #ff4800 solid;}
+#join_2{width:500px; height:250px; background:#fff; float:left; margin-left:10px;text-align:center; border:1px #ff4800 solid;}
+#join_3{width:500px; height:250px; background:#fff; float:left; margin-left:10px;text-align:center; border:1px #ff4800 solid;}
 #join_4{width:250px; height:250px; background:#fff; float:left; margin-left:10px;text-align:center; border:1px #ff4800 solid;}
 #join a div:hover {background-color:#ff4800; border-radius:30px; 
 							transition-property: width, border-radius, background-color; transition-duration:0.7s;
