--- a/Barcode/.settings/org.eclipse.wst.common.component
+++ b/Barcode/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Barcode">
+    <wb-module deploy-name="barcode">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/Barcode/build/classes"/>
-        <property name="context-root" value="Barcode"/>
+        <property name="java-output-path" value="/barcode/build/classes"/>
+        <property name="context-root" value="barcode"/>
     </wb-module>
 </project-modules>
