--- a/Barcode/WebContent/search/search_files/style.css
+++ b/Barcode/WebContent/search/search_files/style.css
@@ -24,7 +24,7 @@ body { font-family: 'Nanum Gothic', son-serif; }
 #wrap2{width:100%; height:auto; margin:0 auto; background:#efefef;}
 .blank{width:7px; height:7px; clear:both;}
 /*header*/
-#header{width:100%;height: auto;}
+#header{width:100%;height:120px;}
 #start{width:15%; height:30px; float:right; margin-top:20px;}
 #start p{color:gray; font-size:12px;}
 #start span{font-weight:bold;}
@@ -112,7 +112,8 @@ body { font-family: 'Nanum Gothic', son-serif; }
 
 /*section2*/
 #section2{width:332px; height:auto; padding:5px 0px 0px 0px; float:right;}
-#login{width:100%;height: 120px;margin-top:2px;position:relative;z-index: -10;}
+#login{float: right;position:relative;margin-top: 45px;margin-right: 25px;}
+#login p { color: #fff; font-size: 14px; text-align: center; }
 #login_box{width:213px; height:70px; margin:20px 0px 12px 13px; float:left;
 					}
 
