--- a/Barcode/WebContent/css/admin_style.css
+++ b/Barcode/WebContent/css/admin_style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 *{margin:0; padding:0;}
 body { font-family: 'Nanum Gothic', son-serif; background:#393939;}
 
